@@ -1,5 +1,5 @@
 #ifndef lint
-static char *RCSid() { return RCSid("$Id: history.c,v 1.7 2001/04/18 16:33:27 lhecking Exp $"); }
+static char *RCSid() { return RCSid("$Id: history.c,v 1.8 2002/01/22 18:51:37 mikulik Exp $"); }
 #endif
 
 /* GNUPLOT - history.c */
@@ -194,7 +194,7 @@ char *cmd;
 	return NULL;
 
     /* search through the history */
-    while (entry->prev != NULL) {
+    while (entry != NULL) {
 	line = entry->line;
 	while (isspace((unsigned char) *line))
 	    line++;		/* skip leading spaces */
